--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,10 +29,10 @@
     ]
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue",
-    "tests/**/*.ts",
+    "src//*.ts",
+    "src//*.tsx",
+    "src//*.vue",
+    "tests//*.ts",
     "tests/**/*.tsx"
   ],
   "exclude": [
